--- a/estilos.css
+++ b/estilos.css
@@ -6,7 +6,7 @@
  {
  	background: #EFEFEF;
  	color: #4C4C4C;
- 	font-family: "Peralta", arial;
+ 	font-family: "PT Sans", arial;
  	font-size: 16px;
  	margin: 0;
  }
@@ -102,6 +102,9 @@ nav #publicar_nav a
 {
 	background: white;
 	border-bottom: 3px #22BCE0 solid;
+	margin-bottom: 3em;
+	min-height: 128px;
+	position: relative;
 }
 #contenido .item p
 {
@@ -135,4 +138,16 @@ nav #publicar_nav a
 {
 	color: #444;
 	text-decoration: none;
+}
+#contenido .item .votacion
+{
+	background: white;
+	border-radius: 0 0 0.5em 0.5em;
+	border: 2px solid red;
+	margin: 3px 0 0 0;
+	padding: 0.5em 0;
+	position: absolute;
+	text-align: center;
+	top: 100%;
+	width: 96px;
 }
