--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,13 @@
+ @font-face {
+	font-family: 'icomoon';
+	src:url('fonts/icomoon.eot');
+	src:url('fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('fonts/icomoon.woff') format('woff'),
+		url('fonts/icomoon.ttf') format('truetype'),
+		url('fonts/icomoon.svg#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
  a
 {
 	color: #DD4F24;
@@ -41,8 +51,16 @@
   	background: #22BCE0;
   	float: right;
   	height: 50px;
-  	padding: 0 2px;
+  	line-height: 50px;
   }
+  header #avatar figcaption:after
+  {
+  	content: "\e001";
+  	font-family: "icomoon";
+  	font-size: 0.7em;
+  	opacity: 0.5em;
+  }
+
   header #avatar img
  {
 	float: left;
@@ -79,18 +97,37 @@
  nav #flechita_nav a
  {
  	background: #22BCE0;
- 	margin: 0;
- 	padding: 0.5em;
-
+ 	padding: 0.5em 0;
+ 	text-decoration: none;
  }
+  nav #flechita_nav a:after
+  {
+  	content: "\e000";
+  	font-family: "icomoon";
+  	opacity: 0.6;
+  }
  nav #publicar_nav
  {
+ 	background: #dd4f24;
  	float: right;
  	margin-right: 0;
+ 	padding-right: 1em;
+ 	position: relative;
  }
-nav #publicar_nav a
+  nav #publicar_nav:after
+  {
+  	color: rgba(255,255,255,0.5);
+  	content:"\e003";
+  	font-family: "icomoon";
+  	font-size: 1.8em;
+  	position:absolute;
+  	right: 0;
+  	top: 0;
+
+  }
+ nav #publicar_nav a
 {
-	background: #dd4f24;
+	display: inline-block;
 	padding: 0.5em 1em;
 	text-decoration: none;
 }
@@ -110,6 +147,16 @@ nav #publicar_nav a
 {
 	color: #7A7A7A;
 	font-size: 0.9em;
+}
+#contenido .item .datos_item .guardar_item
+{
+	text-decoration: none;	
+}
+#contenido .item .datos_item .guardar_item:after
+{
+	color: #FD5;
+	content: "\e004";
+	font-family: "icomoon";
 }
 #contenido .item .datos_item .tag_item
 {
@@ -143,11 +190,32 @@ nav #publicar_nav a
 {
 	background: white;
 	border-radius: 0 0 0.5em 0.5em;
-	border: 2px solid red;
 	margin: 3px 0 0 0;
 	padding: 0.5em 0;
 	position: absolute;
 	text-align: center;
 	top: 100%;
 	width: 96px;
+}
+#contenido .item .votacion a
+{
+		text-decoration: none;
+}
+#contenido .item .votacion .down:after,
+#contenido .item .votacion .up:after
+{
+	font-family: "icomoon";
+	font-size: 1.5em;
+	vertical-align: bottom;
+}
+
+#contenido .item .votacion .up:after
+{
+	color: red;
+	content: "\e002";
+}
+#contenido .item .votacion .down:after
+{
+	color:	green;
+	content: "\e001";
 }
