--- a/estilos.css
+++ b/estilos.css
@@ -52,58 +52,38 @@
  	float: left;
 
  }
- header h1
- {
- 	font-size: 20px;
- 	font-weight: normal;
- 	margin: 1em 85px 1em 100px;
- 	display: block;
- }
-  header #avatar
-  { 
-  	position: relative;
-  	float: right;
-  	right:0;
-  	top:0;
-  	border-top: 0em;  	
-  }
-  header #avatar:after
-   {
-   	position:relative;
-	right: 0;
-  	top: 0;
-  		
-   }
-  header #avatar figcaption
-  {
-  	background: #22BCE0;
-  	float: right;
-  	height: 50px;
-  	line-height: 50px;
-  }
-  header #avatar figcaption:after
-  {
-  	content: "\e001";
-  	font-family: "icomoon";
-  	font-size: 0.7em;
-  	opacity: 0.5em;
-  }
-
-  header #avatar img
- {
-	float: right;
- 	width: 50px;
- }
- header #logo img
- {
- 	width: 80px;
- }
- nav
- {
- 	background: #878787;
- 	font-size: 0.9em;
-
- }
+ header figure, header h1 {
+    display: inline-block;
+    vertical-align: top;
+}
+header h1 {
+    font-size: 20px;
+    font-weight: normal;
+    margin: 1em 0 0 1rem;
+    width: 60%;
+}
+header #avatar {
+    float: right;
+    margin: 1em 1em 0 0;
+}
+header #avatar figcaption {
+    background: none repeat scroll 0 0 #22BCE0;
+    float: right;
+    height: 50px;
+    line-height: 50px;
+}
+header #avatar figcaption:after {
+    content: "";
+    font-family: "icomoon";
+    font-size: 0.7em;
+}
+header #avatar img {
+    float: left;
+    width: 50px;
+}
+header #logo img {
+    width: 80px;
+}
  nav ul
  {
  	list-style: none;
